--- a/src/index.html
+++ b/src/index.html
@@ -63,35 +63,35 @@
                 </div>
             </dialog>
             <ul class="left_side_navbar_first_list flex">
-                <li id="left_side_navbar_first_list_all_tasks" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
-                    <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.5 8H4m0-2v13a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1h-5.032a1 1 0 0 1-.768-.36l-1.9-2.28a1 1 0 0 0-.768-.36H5a1 1 0 0 0-1 1Z"/>
+                <li id="left_side_navbar_all_tasks_btn" data-name="All Tasks" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
+                    <svg data-name="All Tasks" class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path data-name="All Tasks" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.5 8H4m0-2v13a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1h-5.032a1 1 0 0 1-.768-.36l-1.9-2.28a1 1 0 0 0-.768-.36H5a1 1 0 0 0-1 1Z"/>
                     </svg>                      
-                    <p class="left_side_navbar_task_title">All Tasks</p>
+                    <p data-name="All Tasks" class="left_side_navbar_task_title">All Tasks</p>
                 </li>
-                <li id="left_side_navbar_first_list_today" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
-                    <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
+                <li id="left_side_navbar_today_btn" data-name="Today" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
+                    <svg data-name="Today" class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path data-name="Today" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
                     </svg>                      
-                    <p class="left_side_navbar_task_title">Today</p>
+                    <p data-name="Today" class="left_side_navbar_task_title">Today</p>
                 </li>
-                <li id="left_side_navbar_first_list_this_week" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
-                    <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"/>
+                <li id="left_side_navbar_this_week_btn" data-name="This Week" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
+                    <svg data-name="This Week" class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path data-name="This Week" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"/>
                     </svg>                      
-                    <p class="left_side_navbar_task_title">This Week</p>
+                    <p data-name="This Week" class="left_side_navbar_task_title">This Week</p>
                 </li>
-                <li id="left_side_navbar_first_list_urgent" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
-                    <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                <li id="left_side_navbar_urgent_btn" data-name="Urgent" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
+                    <svg data-name="Urgent" class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path data-name="Urgent" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
                     </svg>
-                    <p class="left_side_navbar_task_title">Urgent</p>
+                    <p data-name="Urgent" class="left_side_navbar_task_title">Urgent</p>
                 </li>
-                <li id="left_side_navbar_first_list_completed" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
-                    <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M10 12v1h4v-1m4 7H6a1 1 0 0 1-1-1V9h14v9a1 1 0 0 1-1 1ZM4 5h16a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1Z"/>
+                <li id="left_side_navbar_completed_btn" data-name="Completed" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
+                    <svg data-name="Completed" class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path data-name="Completed" stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M10 12v1h4v-1m4 7H6a1 1 0 0 1-1-1V9h14v9a1 1 0 0 1-1 1ZM4 5h16a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1Z"/>
                     </svg>
-                    <p class="left_side_navbar_task_title">Completed</p>
+                    <p data-name="Completed" class="left_side_navbar_task_title">Completed</p>
                 </li>
             </ul>
         </section>
@@ -149,11 +149,11 @@
             <svg class="main_content_section_main_title_container_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.5 8H4m0-2v13a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1h-5.032a1 1 0 0 1-.768-.36l-1.9-2.28a1 1 0 0 0-.768-.36H5a1 1 0 0 0-1 1Z"/>
             </svg>
-            <h2 class="main_content_section_main_title">All</h2>
+            <h2 id="main_content_section_main_title" class="main_content_section_main_title">All Tasks</h2>
         </header>
         <section class="main_content_section_task_container flex">
             <h3 class="main_content_section_task_title">Tasks</h3>
-            <section class="main_content_section_task_list_container flex">
+            <section id="main_content_section_task_list_container" class="main_content_section_task_list_container flex">
                 <article class="main_content_section_individual_task flex current_option">
                     <div class="main_content_section_task_description_left flex">
                         <input type="checkbox" name="task_checkbox1" class="main_content_section_task_checkbox interactive_icons pointer" id="task1">
